--- a/ReactiveViewModel.xcodeproj/xcshareddata/xcschemes/ReactiveViewModel Mac.xcscheme
+++ b/ReactiveViewModel.xcodeproj/xcshareddata/xcschemes/ReactiveViewModel Mac.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-               BuildableName = "ReactiveViewModel.framework"
+               BuildableName = ".framework"
                BlueprintName = "ReactiveViewModel Mac"
                ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-            BuildableName = "ReactiveViewModel.framework"
+            BuildableName = ".framework"
             BlueprintName = "ReactiveViewModel Mac"
             ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
          </BuildableReference>
@@ -80,7 +80,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-            BuildableName = "ReactiveViewModel.framework"
+            BuildableName = ".framework"
             BlueprintName = "ReactiveViewModel Mac"
             ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
          </BuildableReference>
@@ -98,7 +98,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-            BuildableName = "ReactiveViewModel.framework"
+            BuildableName = ".framework"
             BlueprintName = "ReactiveViewModel Mac"
             ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
          </BuildableReference>
